--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <h2>Inventory</h2>
       <ul id="inventoryList"></ul>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.5.0/build/global/luxon.min.js"></script>
     <script src="./main.js"></script>
   </body>
 </html>
