se añade precio como categoria

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <h1>Inventory Management</h1>
       <input type="number" id="itemNumber" placeholder="Item number" required />
       <input type="text" id="itemName" placeholder="Item name" required />
+      <input type="number" id="itemPrice" placeholder="Item price" required />
       <button id="addItemButton">Add Item</button>
       <div id="message"></div>
       <h2>Inventory</h2>
